# GasSensing

./: .gitignore  README.md  codetest.ipynb  main.py  pyproject.toml
paper/: optical_trans&sum.docx
src/: dataset.py  model.py  utils.py
